package Fuentes;

import Estructuras.Hecho;

import java.util.List;

public abstract class Fuente {
    private List<Hecho> listaHechos;

}
